create function to check win conditions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title></title>
   </head>
   <body>
-
+    <button id="CatStart" class="btn" type="button" name="button">Start as cat!</button>
+    <button id="DogStart" class="btn" type="button" name="button">Start as dog!</button>
   </body>
 </html>
