add front end logic and start button functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title></title>
   </head>
   <body>
-    <button id="CatStart" class="btn" type="button" name="button">Start as cat!</button>
-    <button id="DogStart" class="btn" type="button" name="button">Start as dog!</button>
+    <div id="starterbuttons">
+      <button id="CatStart" class="btn" type="button" name="button">Start as cat!</button>
+      <button id="DogStart" class="btn" type="button" name="button">Start as dog!</button>
+    </div>
   </body>
 </html>
