add click function to player tiles

--- a/index.html
+++ b/index.html
@@ -9,9 +9,48 @@
     <title></title>
   </head>
   <body>
-    <div id="starterbuttons">
-      <button id="CatStart" class="btn" type="button" name="button">Start as cat!</button>
-      <button id="DogStart" class="btn" type="button" name="button">Start as dog!</button>
+    <div class="starterbuttons" id="catStart">
+      <button class="btn" type="button" name="button">Start as cat!</button>
     </div>
+    <div class="starterbuttons" id="dogStart">
+      <button class="btn" type="button" name="button">Start as dog!</button>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4 space" id="space1">
+          <h2>Space1</h2>
+        </div>
+        <div class="col-xs-4 space" id="space2">
+          <h2>Space2</h2>
+        </div>
+        <div class="col-xs-4 space" id="space3">
+          <h2>Space3</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 space"id="space4">
+          <h2>Space4</h2>
+        </div>
+        <div class="col-xs-4 space"  id="space5">
+          <h2>Space5</h2>
+        </div>
+        <div class="col-xs-4 space"  id="space6">
+          <h2>Space6</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 space"  id="space7">
+          <h2>Space7</h2>
+        </div>
+        <div class="col-xs-4 space"  id="space8">
+          <h2>Space8</h2>
+        </div>
+        <div class="col-xs-4 space"  id="space9">
+          <h2>Space9</h2>
+        </div>
+      </div>
+
+    </div>
+
   </body>
 </html>
