--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4 space" id="space1">
+        <div class="col-xs-4 space catimg1" id="space1">
           <h2>Space1</h2>
         </div>
         <div class="col-xs-4 space" id="space2">
@@ -49,7 +49,9 @@
           <h2>Space9</h2>
         </div>
       </div>
-
+      <div class="reset">
+        <button type="submit" name="playAgain">Play Again!</button>
+      </div>
     </div>
 
   </body>
